parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones_globales
Rule 2     instrucciones_globales -> instrucciones_globales instruccion_global
Rule 3     instrucciones_globales -> instruccion_global
Rule 4     instruccion_global -> instruccion
Rule 5     instruccion_global -> funcion
Rule 6     funcion -> funcion_parametros_tipo
Rule 7     funcion -> funcion_tipo
Rule 8     funcion -> funcion_parametros
Rule 9     funcion -> funcion_simple
Rule 10    funcion_simple -> FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 11    funcion_parametros -> FUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 12    funcion_tipo -> FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
Rule 13    funcion_parametros_tipo -> FUNCTION ID PARIZQ parametros PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
Rule 14    parametros -> parametros COMA parametro
Rule 15    parametros -> parametro
Rule 16    parametro -> ID DOSPUNTOS tipo
Rule 17    parametro -> ID DOSPUNTOS tipo CORCHETEIZQ CORCHETEDER
Rule 18    instrucciones -> instrucciones instruccion
Rule 19    instrucciones -> instruccion
Rule 20    instruccion -> instruccion_console
Rule 21    instruccion -> declaracion_variables PUNTOCOMA
Rule 22    instruccion -> declaracion_constantes PUNTOCOMA
Rule 23    instruccion -> asignacion PUNTOCOMA
Rule 24    instruccion -> if
Rule 25    instruccion -> switch
Rule 26    instruccion -> while
Rule 27    instruccion -> for
Rule 28    instruccion -> declaracion_arreglo PUNTOCOMA
Rule 29    instruccion -> push PUNTOCOMA
Rule 30    instruccion -> llamado_funcion PUNTOCOMA
Rule 31    instruccion -> interfaz
Rule 32    instruccion -> declaracion_interfaz PUNTOCOMA
Rule 33    instruccion -> break PUNTOCOMA
Rule 34    instruccion -> continue PUNTOCOMA
Rule 35    instruccion -> return PUNTOCOMA
Rule 36    return -> RETURN expresion
Rule 37    continue -> CONTINUE
Rule 38    break -> BREAK
Rule 39    declaracion_interfaz -> VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
Rule 40    declaracion_interfaz -> CONST ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
Rule 41    atributos_declarados -> atributos_declarados COMA atributo_declarado
Rule 42    atributos_declarados -> atributo_declarado
Rule 43    atributo_declarado -> ID DOSPUNTOS expresion
Rule 44    interfaz -> INTERFACE ID LLAVEIZQ atributos LLAVEDER
Rule 45    atributos -> atributos atributo
Rule 46    atributos -> atributo
Rule 47    atributo -> ID DOSPUNTOS tipo PUNTOCOMA
Rule 48    atributo -> ID DOSPUNTOS ID PUNTOCOMA
Rule 49    push -> ID PUNTO PUSH PARIZQ expresion PARDER
Rule 50    declaracion_arreglo -> VAR ID DOSPUNTOS tipo corchetes IGUAL expresion
Rule 51    declaracion_arreglo -> CONST ID DOSPUNTOS tipo corchetes IGUAL expresion
Rule 52    corchetes -> corchetes CORCHETEIZQ CORCHETEDER
Rule 53    corchetes -> CORCHETEIZQ CORCHETEDER
Rule 54    corchete_expresion -> CORCHETEIZQ expresiones CORCHETEDER
Rule 55    expresiones -> expresiones COMA expresion
Rule 56    expresiones -> expresion
Rule 57    for -> for_simple
Rule 58    for -> for_each
Rule 59    for_each -> FOR PARIZQ VAR ID OF ID PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 60    for_simple -> FOR PARIZQ declaracion_variables PUNTOCOMA expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 61    while -> WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 62    switch -> switch_normal
Rule 63    switch -> switch_default
Rule 64    switch_normal -> SWITCH PARIZQ expresion PARDER LLAVEIZQ cases LLAVEDER
Rule 65    switch_default -> SWITCH PARIZQ expresion PARDER LLAVEIZQ cases default LLAVEDER
Rule 66    default -> DEFAULT DOSPUNTOS instrucciones
Rule 67    cases -> cases case
Rule 68    cases -> case
Rule 69    case -> CASE expresion DOSPUNTOS instrucciones BREAK PUNTOCOMA
Rule 70    if -> if_normal
Rule 71    if -> if_else
Rule 72    if -> if_else_if
Rule 73    if -> if_else_if_else
Rule 74    if_normal -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 75    if_else -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 76    if_else_if -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if
Rule 77    if_else_if_else -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 78    elses_if -> elses_if else_if
Rule 79    elses_if -> else_if
Rule 80    else_if -> ELSE IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 81    asignacion -> ID IGUAL expresion
Rule 82    asignacion -> ID SUMA_IGUAL expresion
Rule 83    asignacion -> ID RESTA_IGUAL expresion
Rule 84    asignacion -> llama_indice_arreglo IGUAL expresion
Rule 85    asignacion -> llama_indice_arreglo SUMA_IGUAL expresion
Rule 86    asignacion -> llama_indice_arreglo RESTA_IGUAL expresion
Rule 87    asignacion -> llave_objeto IGUAL expresion
Rule 88    asignacion -> llave_objeto SUMA_IGUAL expresion
Rule 89    asignacion -> llave_objeto RESTA_IGUAL expresion
Rule 90    declaracion_constantes -> constantes_con_tipo
Rule 91    declaracion_constantes -> constantes_sin_tipo
Rule 92    constantes_con_tipo -> CONST ID DOSPUNTOS tipo IGUAL expresion
Rule 93    constantes_sin_tipo -> CONST ID IGUAL expresion
Rule 94    declaracion_variables -> declaracion_tipo_valor
Rule 95    declaracion_variables -> declaracion_valor
Rule 96    declaracion_variables -> declaracion_tipo
Rule 97    declaracion_valor -> VAR ID IGUAL expresion
Rule 98    declaracion_tipo -> VAR ID DOSPUNTOS tipo
Rule 99    declaracion_tipo_valor -> VAR ID DOSPUNTOS tipo IGUAL expresion
Rule 100   instruccion_console -> CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
Rule 101   tipo -> NUMBER
Rule 102   tipo -> STRING
Rule 103   tipo -> BOOLEAN
Rule 104   tipo -> CHAR
Rule 105   tipo -> FLOAT
Rule 106   expresion -> expresion MAS expresion
Rule 107   expresion -> expresion MENOS expresion
Rule 108   expresion -> expresion POR expresion
Rule 109   expresion -> expresion DIVIDIDO expresion
Rule 110   expresion -> expresion MODULO expresion
Rule 111   expresion -> expresion MAYORQUE expresion
Rule 112   expresion -> expresion MENORQUE expresion
Rule 113   expresion -> expresion MAYORIGUAL expresion
Rule 114   expresion -> expresion MENORIGUAL expresion
Rule 115   expresion -> expresion IGUALIGUAL expresion
Rule 116   expresion -> expresion DISTINTO expresion
Rule 117   expresion -> expresion AND expresion
Rule 118   expresion -> expresion OR expresion
Rule 119   expresion -> MENOS expresion
Rule 120   expresion -> NOT expresion
Rule 121   expresion -> PARIZQ expresion PARDER
Rule 122   expresion -> ENTERO
Rule 123   expresion -> CADENA
Rule 124   expresion -> DECIMAL
Rule 125   expresion -> BOLEANO
Rule 126   expresion -> NULL
Rule 127   expresion -> CARACTER
Rule 128   expresion -> llamado_funcion
Rule 129   expresion -> llave_objeto
Rule 130   expresion -> corchete_expresion
Rule 131   expresion -> expresion INTERROGACION expresion DOSPUNTOS expresion
Rule 132   expresion -> OBJECT PUNTO VALUES PARIZQ ID PARDER
Rule 133   expresion -> OBJECT PUNTO KEYS PARIZQ ID PARDER
Rule 134   llave_objeto -> ID PUNTO llaves_objeto
Rule 135   llaves_objeto -> llaves_objeto PUNTO ID
Rule 136   llaves_objeto -> ID
Rule 137   expresion -> expresion PUNTO TO_UPPER_CASE PARIZQ PARDER
Rule 138   expresion -> ID PUNTO TO_UPPER_CASE PARIZQ PARDER
Rule 139   expresion -> TYPEOF expresion
Rule 140   expresion -> expresion PUNTO TO_LOWER_CASE PARIZQ PARDER
Rule 141   expresion -> ID PUNTO TO_LOWER_CASE PARIZQ PARDER
Rule 142   expresion -> expresion PUNTO TO_STRING PARIZQ PARDER
Rule 143   expresion -> ID PUNTO TO_STRING PARIZQ PARDER
Rule 144   expresion -> PARSE_FLOAT PARIZQ expresion PARDER
Rule 145   expresion -> PARSE_INT PARIZQ expresion PARDER
Rule 146   llamado_funcion -> ID PARIZQ PARDER
Rule 147   llamado_funcion -> ID PARIZQ expresiones PARDER
Rule 148   expresion -> ID
Rule 149   expresion -> llama_indice_arreglo
Rule 150   expresion -> pop
Rule 151   expresion -> length
Rule 152   expresion -> join
Rule 153   expresion -> index_of
Rule 154   llama_indice_arreglo -> ID corchetes_expresion
Rule 155   corchetes_expresion -> corchetes_expresion corchete_expresion
Rule 156   corchetes_expresion -> corchete_expresion
Rule 157   index_of -> ID PUNTO INDEX_OF PARIZQ expresion PARDER
Rule 158   length -> ID PUNTO LENGTH
Rule 159   join -> ID PUNTO JOIN PARIZQ PARDER
Rule 160   pop -> ID PUNTO POP PARIZQ PARDER

Terminals, with rules where they appear

AND                  : 117
BOLEANO              : 125
BOOLEAN              : 103
BREAK                : 38 69
CADENA               : 123
CARACTER             : 127
CASE                 : 69
CHAR                 : 104
COMA                 : 14 41 55
CONSOLE              : 100
CONST                : 40 51 92 93
CONTINUE             : 37
CORCHETEDER          : 17 52 53 54
CORCHETEIZQ          : 17 52 53 54
DECIMAL              : 124
DEFAULT              : 66
DISTINTO             : 116
DIVIDIDO             : 109
DOSPUNTOS            : 12 13 16 17 39 40 43 47 48 50 51 66 69 92 98 99 131
ELSE                 : 75 77 80
ENTERO               : 122
FLOAT                : 105
FOR                  : 59 60
FUNCTION             : 10 11 12 13
ID                   : 10 11 12 13 16 17 39 39 40 40 43 44 47 48 48 49 50 51 59 59 60 81 82 83 92 93 97 98 99 132 133 134 135 136 138 141 143 146 147 148 154 157 158 159 160
IF                   : 74 75 76 77 80
IGUAL                : 39 40 50 51 81 84 87 92 93 97 99
IGUALIGUAL           : 115
INDEX_OF             : 157
INTERFACE            : 44
INTERROGACION        : 131
JOIN                 : 159
KEYS                 : 133
LENGTH               : 158
LLAVEDER             : 10 11 12 13 39 40 44 59 60 61 64 65 74 75 75 76 77 77 80
LLAVEIZQ             : 10 11 12 13 39 40 44 59 60 61 64 65 74 75 75 76 77 77 80
LOG                  : 100
MAS                  : 60 60 106
MAYORIGUAL           : 113
MAYORQUE             : 111
MENORIGUAL           : 114
MENORQUE             : 112
MENOS                : 107 119
MODULO               : 110
NOT                  : 120
NULL                 : 126
NUMBER               : 101
OBJECT               : 132 133
OF                   : 59
OR                   : 118
PARDER               : 10 11 12 13 49 59 60 61 64 65 74 75 76 77 80 100 121 132 133 137 138 140 141 142 143 144 145 146 147 157 159 160
PARIZQ               : 10 11 12 13 49 59 60 61 64 65 74 75 76 77 80 100 121 132 133 137 138 140 141 142 143 144 145 146 147 157 159 160
PARSE_FLOAT          : 144
PARSE_INT            : 145
POP                  : 160
POR                  : 108
PUNTO                : 49 100 132 133 134 135 137 138 140 141 142 143 157 158 159 160
PUNTOCOMA            : 21 22 23 28 29 30 32 33 34 35 47 48 60 60 69 100
PUSH                 : 49
RESTA_IGUAL          : 83 86 89
RETURN               : 36
STRING               : 102
SUMA_IGUAL           : 82 85 88
SWITCH               : 64 65
TO_LOWER_CASE        : 140 141
TO_STRING            : 142 143
TO_UPPER_CASE        : 137 138
TYPEOF               : 139
VALUES               : 132
VAR                  : 39 50 59 97 98 99
WHILE                : 61
error                : 

Nonterminals, with rules where they appear

asignacion           : 23
atributo             : 45 46
atributo_declarado   : 41 42
atributos            : 44 45
atributos_declarados : 39 40 41
break                : 33
case                 : 67 68
cases                : 64 65 67
constantes_con_tipo  : 90
constantes_sin_tipo  : 91
continue             : 34
corchete_expresion   : 130 155 156
corchetes            : 50 51 52
corchetes_expresion  : 154 155
declaracion_arreglo  : 28
declaracion_constantes : 22
declaracion_interfaz : 32
declaracion_tipo     : 96
declaracion_tipo_valor : 94
declaracion_valor    : 95
declaracion_variables : 21 60
default              : 65
else_if              : 78 79
elses_if             : 76 77 78
expresion            : 36 43 49 50 51 55 56 60 61 64 65 69 74 75 76 77 80 81 82 83 84 85 86 87 88 89 92 93 97 99 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 120 121 131 131 131 137 139 140 142 144 145 157
expresiones          : 54 55 100 147
for                  : 27
for_each             : 58
for_simple           : 57
funcion              : 5
funcion_parametros   : 8
funcion_parametros_tipo : 6
funcion_simple       : 9
funcion_tipo         : 7
if                   : 24
if_else              : 71
if_else_if           : 72
if_else_if_else      : 73
if_normal            : 70
index_of             : 153
instruccion          : 4 18 19
instruccion_console  : 20
instruccion_global   : 2 3
instrucciones        : 10 11 12 13 18 59 60 61 66 69 74 75 75 76 77 77 80
instrucciones_globales : 1 2
interfaz             : 31
join                 : 152
length               : 151
llama_indice_arreglo : 84 85 86 149
llamado_funcion      : 30 128
llave_objeto         : 87 88 89 129
llaves_objeto        : 134 135
parametro            : 14 15
parametros           : 11 13 14
pop                  : 150
push                 : 29
return               : 35
start                : 0
switch               : 25
switch_default       : 63
switch_normal        : 62
tipo                 : 12 13 16 17 47 50 51 92 98 99
while                : 26

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones_globales
    (2) instrucciones_globales -> . instrucciones_globales instruccion_global
    (3) instrucciones_globales -> . instruccion_global
    (4) instruccion_global -> . instruccion
    (5) instruccion_global -> . funcion
    (20) instruccion -> . instruccion_console
    (21) instruccion -> . declaracion_variables PUNTOCOMA
    (22) instruccion -> . declaracion_constantes PUNTOCOMA
    (23) instruccion -> . asignacion PUNTOCOMA
    (24) instruccion -> . if
    (25) instruccion -> . switch
    (26) instruccion -> . while
    (27) instruccion -> . for
    (28) instruccion -> . declaracion_arreglo PUNTOCOMA
    (29) instruccion -> . push PUNTOCOMA
    (30) instruccion -> . llamado_funcion PUNTOCOMA
    (31) instruccion -> . interfaz
    (32) instruccion -> . declaracion_interfaz PUNTOCOMA
    (33) instruccion -> . break PUNTOCOMA
    (34) instruccion -> . continue PUNTOCOMA
    (35) instruccion -> . return PUNTOCOMA
    (6) funcion -> . funcion_parametros_tipo
    (7) funcion -> . funcion_tipo
    (8) funcion -> . funcion_parametros
    (9) funcion -> . funcion_simple
    (100) instruccion_console -> . CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
    (94) declaracion_variables -> . declaracion_tipo_valor
    (95) declaracion_variables -> . declaracion_valor
    (96) declaracion_variables -> . declaracion_tipo
    (90) declaracion_constantes -> . constantes_con_tipo
    (91) declaracion_constantes -> . constantes_sin_tipo
    (81) asignacion -> . ID IGUAL expresion
    (82) asignacion -> . ID SUMA_IGUAL expresion
    (83) asignacion -> . ID RESTA_IGUAL expresion
    (84) asignacion -> . llama_indice_arreglo IGUAL expresion
    (85) asignacion -> . llama_indice_arreglo SUMA_IGUAL expresion
    (86) asignacion -> . llama_indice_arreglo RESTA_IGUAL expresion
    (87) asignacion -> . llave_objeto IGUAL expresion
    (88) asignacion -> . llave_objeto SUMA_IGUAL expresion
    (89) asignacion -> . llave_objeto RESTA_IGUAL expresion
    (70) if -> . if_normal
    (71) if -> . if_else
    (72) if -> . if_else_if
    (73) if -> . if_else_if_else
    (62) switch -> . switch_normal
    (63) switch -> . switch_default
    (61) while -> . WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (57) for -> . for_simple
    (58) for -> . for_each
    (50) declaracion_arreglo -> . VAR ID DOSPUNTOS tipo corchetes IGUAL expresion
    (51) declaracion_arreglo -> . CONST ID DOSPUNTOS tipo corchetes IGUAL expresion
    (49) push -> . ID PUNTO PUSH PARIZQ expresion PARDER
    (146) llamado_funcion -> . ID PARIZQ PARDER
    (147) llamado_funcion -> . ID PARIZQ expresiones PARDER
    (44) interfaz -> . INTERFACE ID LLAVEIZQ atributos LLAVEDER
    (39) declaracion_interfaz -> . VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
    (40) declaracion_interfaz -> . CONST ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
    (38) break -> . BREAK
    (37) continue -> . CONTINUE
    (36) return -> . RETURN expresion
    (13) funcion_parametros_tipo -> . FUNCTION ID PARIZQ parametros PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
    (12) funcion_tipo -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
    (11) funcion_parametros -> . FUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (10) funcion_simple -> . FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (99) declaracion_tipo_valor -> . VAR ID DOSPUNTOS tipo IGUAL expresion
    (97) declaracion_valor -> . VAR ID IGUAL expresion
    (98) declaracion_tipo -> . VAR ID DOSPUNTOS tipo
    (92) constantes_con_tipo -> . CONST ID DOSPUNTOS tipo IGUAL expresion
    (93) constantes_sin_tipo -> . CONST ID IGUAL expresion
    (154) llama_indice_arreglo -> . ID corchetes_expresion
    (134) llave_objeto -> . ID PUNTO llaves_objeto
    (74) if_normal -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (75) if_else -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
    (76) if_else_if -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if
    (77) if_else_if_else -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if ELSE LLAVEIZQ instrucciones LLAVEDER
    (64) switch_normal -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ cases LLAVEDER
    (65) switch_default -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ cases default LLAVEDER
    (60) for_simple -> . FOR PARIZQ declaracion_variables PUNTOCOMA expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
    (59) for_each -> . FOR PARIZQ VAR ID OF ID PARDER LLAVEIZQ instrucciones LLAVEDER

    CONSOLE         shift and go to state 26
    ID              shift and go to state 32
    WHILE           shift and go to state 41
    VAR             shift and go to state 44
    CONST           shift and go to state 45
    INTERFACE       shift and go to state 46
    BREAK           shift and go to state 47
    CONTINUE        shift and go to state 48
    RETURN          shift and go to state 49
    FUNCTION        shift and go to state 50
    IF              shift and go to state 51
    SWITCH          shift and go to state 52
    FOR             shift and go to state 53

    start                          shift and go to state 1
    instrucciones_globales         shift and go to state 2
    instruccion_global             shift and go to state 3
    instruccion                    shift and go to state 4
    funcion                        shift and go to state 5
    instruccion_console            shift and go to state 6
    declaracion_variables          shift and go to state 7
    declaracion_constantes         shift and go to state 8
    asignacion                     shift and go to state 9
    if                             shift and go to state 10
    switch                         shift and go to state 11
    while                          shift and go to state 12
    for                            shift and go to state 13
    declaracion_arreglo            shift and go to state 14
    push                           shift and go to state 15
    llamado_funcion                shift and go to state 16
    interfaz                       shift and go to state 17
    declaracion_interfaz           shift and go to state 18
    break                          shift and go to state 19
    continue                       shift and go to state 20
    return                         shift and go to state 21
    funcion_parametros_tipo        shift and go to state 22
    funcion_tipo                   shift and go to state 23
    funcion_parametros             shift and go to state 24
    funcion_simple                 shift and go to state 25
    declaracion_tipo_valor         shift and go to state 27
    declaracion_valor              shift and go to state 28
    declaracion_tipo               shift and go to state 29
    constantes_con_tipo            shift and go to state 30
    constantes_sin_tipo            shift and go to state 31
    llama_indice_arreglo           shift and go to state 33
    llave_objeto                   shift and go to state 34
    if_normal                      shift and go to state 35
    if_else                        shift and go to state 36
    if_else_if                     shift and go to state 37
    if_else_if_else                shift and go to state 38
    switch_normal                  shift and go to state 39
    switch_default                 shift and go to state 40
    for_simple                     shift and go to state 42
    for_each                       shift and go to state 43

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones_globales .
    (2) instrucciones_globales -> instrucciones_globales . instruccion_global
    (4) instruccion_global -> . instruccion
    (5) instruccion_global -> . funcion
    (20) instruccion -> . instruccion_console
    (21) instruccion -> . declaracion_variables PUNTOCOMA
    (22) instruccion -> . declaracion_constantes PUNTOCOMA
    (23) instruccion -> . asignacion PUNTOCOMA
    (24) instruccion -> . if
    (25) instruccion -> . switch
    (26) instruccion -> . while
    (27) instruccion -> . for
    (28) instruccion -> . declaracion_arreglo PUNTOCOMA
    (29) instruccion -> . push PUNTOCOMA
    (30) instruccion -> . llamado_funcion PUNTOCOMA
    (31) instruccion -> . interfaz
    (32) instruccion -> . declaracion_interfaz PUNTOCOMA
    (33) instruccion -> . break PUNTOCOMA
    (34) instruccion -> . continue PUNTOCOMA
    (35) instruccion -> . return PUNTOCOMA
    (6) funcion -> . funcion_parametros_tipo
    (7) funcion -> . funcion_tipo
    (8) funcion -> . funcion_parametros
    (9) funcion -> . funcion_simple
    (100) instruccion_console -> . CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
    (94) declaracion_variables -> . declaracion_tipo_valor
    (95) declaracion_variables -> . declaracion_valor
    (96) declaracion_variables -> . declaracion_tipo
    (90) declaracion_constantes -> . constantes_con_tipo
    (91) declaracion_constantes -> . constantes_sin_tipo
    (81) asignacion -> . ID IGUAL expresion
    (82) asignacion -> . ID SUMA_IGUAL expresion
    (83) asignacion -> . ID RESTA_IGUAL expresion
    (84) asignacion -> . llama_indice_arreglo IGUAL expresion
    (85) asignacion -> . llama_indice_arreglo SUMA_IGUAL expresion
    (86) asignacion -> . llama_indice_arreglo RESTA_IGUAL expresion
    (87) asignacion -> . llave_objeto IGUAL expresion
    (88) asignacion -> . llave_objeto SUMA_IGUAL expresion
    (89) asignacion -> . llave_objeto RESTA_IGUAL expresion
    (70) if -> . if_normal
    (71) if -> . if_else
    (72) if -> . if_else_if
    (73) if -> . if_else_if_else
    (62) switch -> . switch_normal
    (63) switch -> . switch_default
    (61) while -> . WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (57) for -> . for_simple
    (58) for -> . for_each
    (50) declaracion_arreglo -> . VAR ID DOSPUNTOS tipo corchetes IGUAL expresion
    (51) declaracion_arreglo -> . CONST ID DOSPUNTOS tipo corchetes IGUAL expresion
    (49) push -> . ID PUNTO PUSH PARIZQ expresion PARDER
    (146) llamado_funcion -> . ID PARIZQ PARDER
    (147) llamado_funcion -> . ID PARIZQ expresiones PARDER
    (44) interfaz -> . INTERFACE ID LLAVEIZQ atributos LLAVEDER
    (39) declaracion_interfaz -> . VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
    (40) declaracion_interfaz -> . CONST ID DOSPUNTOS ID IGUAL LLAVEIZQ atributos_declarados LLAVEDER
    (38) break -> . BREAK
    (37) continue -> . CONTINUE
    (36) return -> . RETURN expresion
    (13) funcion_parametros_tipo -> . FUNCTION ID PARIZQ parametros PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
    (12) funcion_tipo -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo LLAVEIZQ instrucciones LLAVEDER
    (11) funcion_parametros -> . FUNCTION ID PARIZQ parametros PARDER LLAVEIZQ instrucciones LLAVEDER
    (10) funcion_simple -> . FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (99) declaracion_tipo_valor -> . VAR ID DOSPUNTOS tipo IGUAL expresion
    (97) declaracion_valor -> . VAR ID IGUAL expresion
    (98) declaracion_tipo -> . VAR ID DOSPUNTOS tipo
    (92) constantes_con_tipo -> . CONST ID DOSPUNTOS tipo IGUAL expresion
    (93) constantes_sin_tipo -> . CONST ID IGUAL expresion
    (154) llama_indice_arreglo -> . ID corchetes_expresion
    (134) llave_objeto -> . ID PUNTO llaves_objeto
    (74) if_normal -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (75) if_else -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
    (76) if_else_if -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if
    (77) if_else_if_else -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER elses_if ELSE LLAVEIZQ instrucciones LLAVEDER
    (64) switch_normal -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ cases LLAVEDER
    (65) switch_default -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ cases default LLAVEDER
    (60) for_simple -> . FOR PARIZQ declaracion_variables PUNTOCOMA expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
    (59) for_each -> . FOR PARIZQ VAR ID OF ID PARDER LLAVEIZQ instrucciones LLAVEDER

    $end            reduce using rule 1 (start -> instrucciones_globales .)
    CONSOLE         shift and go to state 26
    ID              shift and go to state 32
    WHILE           shift and go to state 41
    VAR             shift and go to state 44
    CONST           shift and go to state 45
    INTERFACE       shift and go to state 46
    BREAK           shift and go to state 47
    CONTINUE        shift and go to state 48
    RETURN          shift and go to state 49
    FUNCTION        shift and go to state 50
    IF              shift and go to state 51
    SWITCH          shift and go to state 52
    FOR             shift and go to state 53

    instruccion_global             shift and go to state 54
    instruccion                    shift and go to state 4
    funcion                        shift and go to state 5
    instruccion_console            shift and go to state 6
    declaracion_variables          shift and go to state 7
    declaracion_constantes         shift and go to state 8
    asignacion                     shift and go to state 9
    if                             shift and go to state 10
    switch                         shift and go to state 11
    while                          shift and go to state 12
    for                            shift and go to state 13
    declaracion_arreglo            shift and go to state 14
    push                           shift and go to state 15
    llamado_funcion                shift and go to state 16
    interfaz                       shift and go to state 17
    declaracion_interfaz           shift and go to state 18
    break                          shift and go to state 19
    continue                       shift and go to state 20
    return                         shift and go to state 21
    funcion_parametros_tipo        shift and go to state 22
    funcion_tipo                   shift and go to state 23
    funcion_parametros             shift and go to state 24
    funcion_simple                 shift and go to state 25
    declaracion_tipo_valor         shift and go to state 27
    declaracion_valor              shift and go to state 28
    declaracion_tipo               shift and go to state 29
    constantes_con_tipo            shift and go to state 30
    constantes_sin_tipo            shift and go to state 31
    llama_indice_arreglo           shift and go to state 33
    llave_objeto                   shift and go to state 34
    if_normal                      shift and go to state 35
    if_else                        shift and go to state 36
    if_else_if                     shift and go to state 37
    if_else_if_else                shift and go to state 38
    switch_normal                  shift and go to state 39
    switch_default                 shift and go to state 40
    for_simple                     shift and go to state 42
    for_each                       shift and go to state 43

state 3

    (3) instrucciones_globales -> instruccion_global .

    CONSOLE         reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    ID              reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    WHILE           reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    VAR             reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    CONST           reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    INTERFACE       reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    BREAK           reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    CONTINUE        reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    RETURN          reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    FUNCTION        reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    IF              reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    SWITCH          reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    FOR             reduce using rule 3 (instrucciones_globales -> instruccion_global .)
    $end            reduce using rule 3 (instrucciones_globales -> instruccion_global .)


state 4

    (4) instruccion_global -> instruccion .

    CONSOLE         reduce using rule 4 (instruccion_global -> instruccion .)
    ID              reduce using rule 4 (instruccion_global -> instruccion .)
    WHILE           reduce using rule 4 (instruccion_global -> instruccion .)
    VAR             reduce using rule 4 (instruccion_global -> instruccion .)
    CONST           reduce using rule 4 (instruccion_global -> instruccion .)
    INTERFACE       reduce using rule 4 (instruccion_global -> instruccion .)
    BREAK           reduce using rule 4 (instruccion_global -> instruccion .)
    CONTINUE        reduce using rule 4 (instruccion_global -> instruccion .)
    RETURN          reduce using rule 4 (instruccion_global -> instruccion .)
    FUNCTION        reduce using rule 4 (instruccion_global -> instruccion .)
    IF              reduce using rule 4 (instruccion_global -> instruccion .)
    SWITCH          reduce using rule 4 (instruccion_global -> instruccion .)
    FOR             reduce using rule 4 (instruccion_global -> instruccion .)
    $end            reduce using rule 4 (instruccion_global -> instruccion .)


state 5

    (5) instruccion_global -> funcion .

    CONSOLE         reduce using rule 5 (instruccion_global -> funcion .)
    ID              reduce using rule 5 (instruccion_global -> funcion .)
    WHILE           reduce using rule 5 (instruccion_global -> funcion .)
    VAR             reduce using rule 5 (instruccion_global -> funcion .)
    CONST           reduce using rule 5 (instruccion_global -> funcion .)
    INTERFACE       reduce using rule 5 (instruccion_global -> funcion .)
    BREAK           reduce using rule 5 (instruccion_global -> funcion .)
    CONTINUE        reduce using rule 5 (instruccion_global -> funcion .)
    RETURN          reduce using rule 5 (instruccion_global -> funcion .)
    FUNCTION        reduce using rule 5 (instruccion_global -> funcion .)
    IF              reduce using rule 5 (instruccion_global -> funcion .)
    SWITCH          reduce using rule 5 (instruccion_global -> funcion .)
    FOR             reduce using rule 5 (instruccion_global -> funcion .)
    $end            reduce using rule 5 (instruccion_global -> funcion .)


state 6

    (20) instruccion -> instruccion_console .
